<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shoppapp.modules.main.ui.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <ImageView
                android:id="@+id/icon_app"
                android:layout_width="@dimen/_26dp"
                android:layout_height="@dimen/_26dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_shopping_bag"
                app:layout_constraintBottom_toBottomOf="@id/name_app"
                app:layout_constraintEnd_toStartOf="@id/name_app"
                app:layout_constraintTop_toTopOf="@id/name_app"
                app:tint="@color/pink" />

            <TextView
                android:id="@+id/name_app"
                style="@style/Theme.Shoppapp.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/pink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/container_toolbar"
            app:layout_constraintVertical_bias="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_56dp"
                android:background="@drawable/rounded_corner_all_borders_search_bar"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9">

                <EditText
                    android:id="@+id/searchBar"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_56dp"
                    android:layout_marginStart="16dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/white"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions"
                    android:selectAllOnFocus="true"
                    android:theme="@style/ThemeOverlay.SearchView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/actionOpenFilter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/actionOpenFilter"
                    style="@style/Theme.Shoppapp.Icon.Circle"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/icon_action_filter"
                    android:src="@drawable/icon_filter_list"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_8dp"
                android:indeterminate="true"
                android:progress="30"
                app:indicatorColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:paddingVertical="@dimen/row_item_margin_vertical"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_search"
            tools:ignore="UnusedAttribute"
            tools:itemCount="1"
            tools:listitem="@layout/article_viewholder" />

        <TextView
            android:id="@+id/emptyList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/_montserrat_regular"
            android:text="@string/no_results"
            android:textSize="@dimen/_24sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:backgroundTint="@color/pink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>